table align fix

--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,8 @@ td {
 }
 
 table {
+  margin-left: auto;
+  margin-right: auto;
   text-align: center;
   border: 1px solid green;
 }
